--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -135,12 +135,12 @@ jobs:
       # Setup MacOS dependencies
       CIBW_BEFORE_ALL_MACOS: |
         export MAC_ARCH="${{ matrix.macarch }}"
-        python3 -m pip install Sphinx
-        python3 setup.py docs
         cd buildconfig/macdependencies
         bash ./install_mac_deps.sh
 
-      CIBW_BEFORE_BUILD: pip install requests numpy
+      CIBW_BEFORE_BUILD: |
+        pip install requests numpy Sphinx
+        python setup.py docs
       CIBW_TEST_COMMAND: python -m pygame.tests -v --exclude opengl,timing --time_out 300
 
       # Increase pip debugging output
