--- a/.github/workflows/ubuntu-sdist.yml
+++ b/.github/workflows/ubuntu-sdist.yml
@@ -41,7 +41,8 @@ jobs:
       run: |
         sudo apt-get update --fix-missing
         sudo apt-get upgrade
-        sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libfreetype6-dev libportmidi-dev libjpeg8-dev python3-setuptools python3-dev python3-numpy python3-sphinx
+        sudo apt-get install libsdl2-dev libsdl2-image-dev libsdl2-mixer-dev libsdl2-ttf-dev libfreetype6-dev libportmidi-dev libjpeg8-dev python3-setuptools python3-dev python3-numpy
+        pip3 install sphinx
 
     - name: Make sdist and install it
       run: |
